examples/test/testpolicy11982.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11982
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key10: value32
      key44: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value30
          key0: value2
          key40: value36
      podSelector:
        matchLabels:
          key15: value3
